Update MongoDB URI in .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI = mongodb+srv://hospital:wGXwPCbb3yTcIImC@cluster0.m81ywam.mongodb.net/
+MONGODB_URI = mongodb+srv://hospital:wGXwPCbb3yTcIImC@cluster0.m81ywam.mongodb.net/hostpitalDB
 JWT_SECRET = hospital
